# trusted-firmware-a

./: .clang-format  .cmake-format.py  .code-style  .commitlintrc.js  .cz.json  .editorconfig  .gitignore  .readthedocs.yaml  .versionrc.js  CMakeLists.txt  Makefile  auto_doc.sh  changelog.yaml  clean_commits.txt  commitlint.config.js  contributing.rst  dco.txt  inactive_status  incoming_reviews  incoming_reviews_tf-a-tests  log_commits.txt  main  maintainers.rst  metadata.json  package-lock.json  package.json  pending_reviews  pyproject.toml  readme.rst  review_status  test.sh
bl1/: CMakeLists.txt  bl1.cmake  bl1.ld.S  bl1.mk  bl1_fwu.c  bl1_main.c  bl1_private.h
bl1/aarch32/: bl1_arch_setup.c  bl1_context_mgmt.c  bl1_entrypoint.S  bl1_exceptions.S
bl1/aarch64/: CMakeLists.txt  bl1_arch_setup.c  bl1_context_mgmt.c  bl1_entrypoint.S  bl1_exceptions.S
bl1/tbbr/: tbbr_img_desc.c
common/: CMakeLists.txt  bl_common.c  bl_common.cmake  build_message.c  demangle.c  desc_image_load.c  fdt_fixup.c  fdt_wrappers.c  fdt_wrappers.mk  feat_check.c  feat_detect.c  hw_crc32.c  image_decompress.c  pauth_demangle.c  runtime_svc.c  test-file-2.c  test-file-3.c  test-file-4.c  test-file.c  tf_crc32.c  tf_feat_detect.c  tf_log.c  uuid.c
common/aarch32/: CMakeLists.txt  debug.S
common/aarch64/: CMakeLists.txt  debug.S
common/backtrace/: CMakeLists.txt  backtrace.c  backtrace.mk
common/bootloader/: bootloader.ld.S
drivers/: CMakeLists.txt
drivers/allwinner/: sunxi_msgbox.c  sunxi_rsb.c
drivers/arm/: CMakeLists.txt
drivers/auth/: auth_mod.c  crypto_mod.c  img_parser_mod.c
drivers/brcm/: chimp.c  iproc_gpio.c  ocotp.c  rng.c  scp.c  sotp.c  spi_flash.c  spi_sf.c
drivers/cfi/: CMakeLists.txt
drivers/clk/: clk.c
drivers/console/: CMakeLists.txt  multi_console.c
drivers/debugfs/: blobs.h  dev.c  dev.h  devc.c  devfip.c  devpsci.c  devroot.c
drivers/delay_timer/: CMakeLists.txt  delay_timer.c  generic_delay_timer.c  plat_delay_timer.c
drivers/fconf/: fconf.c  fconf.mk  fconf_dyn_cfg_getter.c  fconf_tbbr_getter.c
drivers/fwu/: fwu.c  fwu.mk  fwu_metadata.c  fwu_private.h
drivers/gpio/: gpio.c
drivers/io/: CMakeLists.txt  io_block.c  io_dummy.c  io_encrypted.c  io_fip.c  io_memmap.c  io_mtd.c  io_semihosting.c  io_storage.c
drivers/marvell/: amb_adec.c  ap807_clocks_init.c  cache_llc.c  ccu.c  comphy.h  ddr_phy_access.c  ddr_phy_access.h  gwin.c  io_win.c  iob.c  mci.c  thermal.c
drivers/measured_boot/: event_log.c  event_print.c  measured_boot.c  measured_boot.mk
drivers/mmc/: mmc.c
drivers/nxp/: drivers.mk
drivers/pal/: pal.c  pal_tbbr_getter.c
drivers/partition/: gpt.c  partition.c
drivers/rambus/: trng_ip_76.c
drivers/regulator/: regulator_core.c
drivers/scmi-msg/: base.c  base.h  clock.c  clock.h  common.h  entry.c  power_domain.c  power_domain.h  reset_domain.c  reset_domain.h  sensor.c  sensor.h  smt.c
drivers/tpm/: tpm2.mk  tpm2_cmds.c  tpm2_fifo.c  tpm2_fifo_i2c.c  tpm2_fifo_mmio.c  tpm2_fifo_spi.c
drivers/ufs/: ufs.c
drivers/usb/: usb_device.c  usb_dfu.c
lib/: CMakeLists.txt  bl_aux_params.c
lib/aarch32/: CMakeLists.txt  arm32_aeabi_divmod.c  cache_helpers.S  misc_helpers.S
lib/aarch64/: CMakeLists.txt  cache_helpers.S  misc_helpers.S  pauth_helpers.S
lib/bl_aux_params/: bl_aux_params.c
lib/compiler-rt/: compiler-rt.mk
lib/coreboot/: coreboot_table.c
lib/cpus/: CMakeLists.txt  cpu-ops.mk  cpus.mk  errata_common.c  errata_report.c
lib/debug_reg_smc/: debug_reg_smc.c
lib/debugfs/: blobs.h  debugfs_smc.c  dev.c  dev.h  devc.c  devfip.c  devroot.c
lib/el3_runtime/: CMakeLists.txt  cpu_data_array.c  simd_ctx.c
lib/extensions/: CMakeLists.txt
lib/fconf/: CMakeLists.txt  fconf.c  fconf.mk  fconf_amu_getter.c  fconf_cot_getter.c  fconf_dyn_cfg_getter.c  fconf_mpmm_getter.c  fconf_tbbr_getter.c
lib/gpt/: gpt.c  gpt.mk  gpt_private.h
lib/gpt_rme/: gpt_rme.c  gpt_rme.mk  gpt_rme_private.h
lib/hob/: hob.c
lib/lib9p/: Makefile  closedir.c  convfr9p.h  convto9p.h  dirtop9.c  frombytes.c  fromstring.c  opendir.c  p9todir.c  readdir.c  tobytes.c  tostring.c
lib/libc/: CMakeLists.txt  abort.c  assert.c  errno.c  exit.c  libc.mk  libc_asm.mk  memchr.c  memcmp.c  memcpy.c  memcpy_align.c  memcpy_asm.c  memcpy_s.c  memmove.c  memrchr.c  memset.c  printf.c  putchar.c  puts.c  snprintf.c  strchr.c  strcmp.c  strcpy.c  strlcat.c  strlcpy.c  strlen.c  strncmp.c  strnlen.c  strrchr.c  strtok.c  strtol.c  strtoll.c  strtoul.c  strtoull.c
lib/libfdt/: CMakeLists.txt  fdt_addresses.c  fdt_empty_tree.c  fdt_ro.c  fdt_strerror.c  fdt_sw.c  libfdt.cmake  libfdt.mk
lib/mpmm/: mpmm.c  mpmm.h  mpmm.mk  mpmm_fconf.c  mpmm_private.h
lib/optee/: optee_utils.c
lib/pmf/: pmf_main.c  pmf_smc.c
lib/psa/: cca_attestation.c  delegated_attestation.c  dice_protection_environment.c  initial_attestation.c  measured_boot.c  measured_boot_private.h  nv_counter_test.c  rss_platform.c
lib/psci/: psci_common.c  psci_lib.cmake  psci_lib.mk  psci_main.c  psci_mem_protect.c  psci_off.c  psci_on.c  psci_private.h  psci_setup.c  psci_stat.c  psci_suspend.c  psci_system_off.c
lib/romlib/: Makefile  genwrappers.sh  jmptbl.i  romlib.ld.S  romlib_generator.py
lib/semihosting/: CMakeLists.txt  semihosting.c
lib/stack_protector/: stack_protector.c  stack_protector.mk
lib/transfer_list/: transfer_list.c  transfer_list.mk
lib/utils/: CMakeLists.txt  mem_region.c
lib/xlat_mpu/: ro_xlat_mpu.mk  xlat_mpu.h  xlat_mpu.mk  xlat_mpu_context.c  xlat_mpu_core.c  xlat_mpu_private.h  xlat_mpu_utils.c
lib/xlat_tables/: xlat_tables_common.c  xlat_tables_private.h
lib/xlat_tables_v2/: CMakeLists.txt  ro_xlat_tables.mk  xlat_tables_context.c  xlat_tables_core.c  xlat_tables_private.h  xlat_tables_utils.c
lib/zlib/: crc32.c  tf_gunzip.c  zlib.mk
plat/common/: CMakeLists.txt  bl31_params.c  plat_bl1_common.c  plat_bl_common.c  plat_gicv2.c  plat_gicv3.c  plat_gicv3x.c  plat_log_common.c  plat_psci_common.c  plat_rmmd_manifest.c  plat_spmd_manifest.c  plat_spmd_service.c  ubsan.c
tools/fiptool/: CMakeLists.txt  Makefile  Makefile.msvc  fiptool.c  (+6 more)
(+5115 files in other folders)
